# CptS440-PokemonAI

./: .gitignore  README.md  pyproject.toml
showdownAIproject/: PLANNING.md  README.md
showdownAIproject/src/psai/: __init__.py
showdownAIproject/src/psai/app/: __init__.py  main.py
showdownAIproject/src/psai/decision/: __init__.py  chooser.py  heuristic.py  search.py
showdownAIproject/src/psai/domain/: __init__.py  state.py
showdownAIproject/src/psai/mechanics/: __init__.py  api.pi
showdownAIproject/src/psai/training/: __init__.py  dataset.py  model.py  train.py
showdownAIproject/tests/: test_heuristics.py  test_search.py
src/showdown_AI.egg-info/: SOURCES.txt
