[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "showdown-AI"
version = "0.1.0"
description = "Pokemon Showdown AI overlay: mechanics + decision engine + policy/value model"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "CptS-440 Team" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux"
]

# Start minimal. Add deps as you actually use them.
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.5",
  "mypy>=1.8",
]

# This makes a terminal command `psai` that runs psai.app.main:main
[project.scripts]
psai = "psai.app.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
